Updated project structure

--- a/CTS_dataprep/implementation/build.properties
+++ b/CTS_dataprep/implementation/build.properties
@@ -1,20 +1,8 @@
-# use if target platform is weblogic 10
-#weblogic.dir=/bea10.3.6
-#weblogic.domain.dir=/dev/domains/d-1036/d-domain01
-#weblogic.lib.dir=${weblogic.dir}/wlserver_10.3/server/lib
-
-#log4j.dir=logs
-
-
 # use if target platform is weblogic 12
-#weblogic.dir=/bea12.1.2
 weblogic.dir=C:/Oracle/Middleware/Oracle_Home
-#weblogic.domain.dir=/dev/domains/d-1212/d-domain01
 weblogic.domain.dir=C:/dev/domains/12_1_2/d-domain01
-#weblogic.lib.dir=${weblogic.dir}/wlserver/server/lib
 weblogic.lib.dir=${weblogic.dir}/wlserver/server/lib
 
-log4j.dir=logs/application
-
+#log4j.dir=${weblogic.domain.dir}/logs/application
 # Build Version Number
 version=1.0.0
