--- a/CTS_dataprep/implementation/cfg/xwork-conversion.properties
+++ b/CTS_dataprep/implementation/cfg/xwork-conversion.properties
@@ -1,1 +1,1 @@
-java.math.BigDecimal=ca.gc.cra.xxxx.struts2base.web.util.CurrencyConverter
+java.math.BigDecimal=ca.gc.cra.fxit.ctsagent.web.util.CurrencyConverter
