--- a/CTS_dataprep/.classpath
+++ b/CTS_dataprep/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="implementation/src"/>
 	<classpathentry kind="src" path="test/junit"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk_wl_12"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="implementation/lib/log4j.jar"/>
 	<classpathentry kind="lib" path="implementation/lib/rccr.ccr.jar"/>
