--- a/CTS_dataprep/implementation/build.xml
+++ b/CTS_dataprep/implementation/build.xml
@@ -111,6 +111,7 @@
     	<copy todir="${ejb.build}/ca/gc/cra/fxit/${app}/resources">
     		 <fileset dir="${src}/ca/gc/cra/fxit/${app}/resources">
     		      <include name="fxit.xmlt.batch.xml" />
+    		 	  <include name="stats.cfg" />
     		 </fileset>
     	</copy>
     	
