--- a/CTS_dataprep/implementation/src/ca/gc/cra/fxit/xmlt/resources/stats.cfg
+++ b/CTS_dataprep/implementation/src/ca/gc/cra/fxit/xmlt/resources/stats.cfg
@@ -1,5 +1,5 @@
 #for each data provider list tags that should be counted
-crs=ReportingFI,AccountReport
-cbc=ReportingEntity,CBCReports
-etr=TaxPayer,RulingReports
-ftc=ReportingFI,AccountReport
+crs=crs:ReportingFI,crs:AccountReport
+cbc=cbc:ReportingEntity,cbc:CBCReports
+etr=etr:TaxPayer,etr:RulingReports
+ftc=ftc:ReportingFI,ftc:AccountReport
